January 12, 2005
    - swrite file creation needs an ios::trunc else existing files will 
      leave postpended data if they were larger.
January 13, 2005
    - Xamine superposition fix for id's > 999
January 26, 2005
    - Fix problem with long spectrum names:
      o Xamine's truncation was making CHistogrammer::UnbindFromDisplay
        assert fail.
      o Xamine was not putting up the correct spectrum list due to a buffer
        overflow problem in spectra.cc
January 27, 2005
    - Fix low level cutoff in 1-ds that had been fixed in 2.1 but not 
      propagated to new versions.

3.0-001
February 11, 2005
    - Added Analysis subdirectory to the build.  This directory will have stuff
      that's used by buffer analysis it is NSCL specific.
February 14, 2005
    - Completed testing of Analysis library.
February 15, 2005
    - Added C interface to Analysis library and unit tests for those.
    - Added check for paths for the 'check' c unit test framework.
February 22, 2005
    - Added/debugged classes to TCL++ that make it easy to
      do variable tracing (TCLTracedVariable, and VariableTraceCallbac e.g.).
    - Added stuff to SpecTcl that allows it to pull stuff out of string list
      buffers that represent TCL scriptlets and execute those scripts. this
      is currently useful to reconstruct control system data and other stuff
      that may be in statevariable and runvariable buffers which look like
      a bunch of set varname value commands.
    - Fix 1/0 month counting problem with run control timestamps in 
      Analysis library.
February 25, 2005
   - Documented the variable tracing support.
   - Documented run/state variable recovery.
March 4, 2005
   - Set the version string to 3.0pre1
March 8, 2005
   - Move the event sink pipeline class into Events and out of 
     the Filter directory.
   - Add SpecTcl API (tested) to the build and cvs.
March 17, 2005
   - Add documentation for the SpecTcl api as a spectcl man page.