@@ -16,7 +16,7 @@ include $(INSTDIR)/etc/Directories.include
 
 #  Build up the compilation flags:
 
-CXXFLAGS=-g -I. -I$(SPECINCS) $(TCLINCLUDES)
+CXXFLAGS=-g -fno-elide-constructors -I. -I$(SPECINCS) $(TCLINCLUDES)
 
 # The c compilation flags for now are just the same as the c++ flags:
 
