@@ -32,3 +32,4 @@ int main(int argc, char** argv)
 
 
 void* gpTCLApplication;
+void* gpAnalyzer;
