@@ -273,12 +273,13 @@ THIRD PARTIES OR A FAILURE OF THE PROGRAM TO OPERATE WITH ANY OTHER PROGRAMS),
 EVEN IF SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH 
 DAMAGES.
 
-		     END OF TERMS AND CONDITIONS
+		     END OF TERMS AND CONDITIONS '
 */
 static const char* Copyright = "(C) Copyright Michigan State University 2010, All rights reserved";
+#include <config.h>
 #include "TapeFile.h"
 #include "Exception.h"
-#include <iostream.h>
+#include <Iostream.h>
 #include <errno.h>
 #include <stdio.h>
 #include <string>
@@ -287,6 +288,11 @@ static const char* Copyright = "(C) Copyright Michigan State University 2010, Al
 #include <fcntl.h>
 #include <unistd.h>
 #include <TCLApplication.h>
+
+#ifdef HAVE_STD_NAMESPACE
+using namespace std;
+#endif
+
 
 void Usage()
 {
